--- a/styles/UI/LoadingSpinner.module.css
+++ b/styles/UI/LoadingSpinner.module.css
@@ -8,7 +8,7 @@
 .pencil__body2,
 .pencil__body3,
 .pencil__eraser,
-.pencil__eraser-skew,
+.pencil__eraser_skew,
 .pencil__point,
 .pencil__rotate,
 .pencil__stroke {
