--- a/styles/feedetails.module.css
+++ b/styles/feedetails.module.css
@@ -8,7 +8,12 @@
   margin-top: 100px;
   margin-bottom: 20px;
   display: grid;
-  gap: 0.2rem;
+  gap: 0.6rem;
+}
+
+.forminputs {
+  display: grid;
+  gap: 0.6rem;
 }
 
 /* select styles  */
@@ -21,6 +26,19 @@
 
 .select {
   width: 200px;
+
+  margin-bottom: 1em;
+  padding: 0.25em;
+  border: 0;
+  border-bottom: 2px solid currentcolor;
+  font-weight: bold;
+  letter-spacing: 0.15em;
+  border-radius: 0;
+}
+.select:focus,
+.select:active {
+  outline: 0;
+  border-bottom-color: red;
 }
 
 /* input styles */
@@ -59,8 +77,7 @@
 
 .input:focus ~ label,
 .input:valid ~ label {
-  top: -20px;
-
+  top: -10px;
   font-size: 14px;
   color: #5264ae;
 }
@@ -244,7 +261,7 @@ input:checked + .slider:before {
 
 /*------ ADDED CSS ---------*/
 .slider:after {
-  content: 'Class';
+  content: 'Year';
   color: white;
   display: block;
   position: absolute;
